Test/Prop/HypotheticalSyllogism.expected
goal: (p → q) → (q → r) → p → r

query:
(declare-const r Bool)
(declare-const p Bool)
(declare-const q Bool)
(assert (not (=> (=> p q) (=> (=> q r) (=> p r)))))
(check-sat)

result: unsat
failed to reconstruct proof: encountered errors elaborating cvc5 proof
Test/Prop/HypotheticalSyllogism.lean:3:77: error: unsolved goals
p q r : Prop
⊢ (p → q) → (q → r) → p → r
